main.css
 html, body {
  font-family: Open Sans,sans-serif;
  font-size: 16px;
  font-weight: 400;
  margin: 0;
  padding: 0;
}

h1, h2, h3, h4, h5, h6 {
  font-family: Comfortaa,cursive;
  font-weight: 700;
  margin: 0px 0px 8px 0px;
}

body {
  padding: 60px;
  color: #707070;
  line-height: 1.3;
}

a, a:active, a:hover, a:visited {
  text-decoration: none;
  color: #707070;
}

.primary {
  color: #fc6f6f !important;
}

.bold {
  font-weight: 700;
}

.options {
  position: absolute;
  top: 20px;
  right: 20px;
  text-align: right;
}

.options input.username {
  border-radius: 4px;
  border: 1px solid #ccc;
  padding: 4px 8px;
  margin-bottom: 8px;
  outline: none;
}

.options img {
  width: 24px;
  height: 24px;
  border-radius: 50%;
  margin-bottom: 8px;
  cursor: pointer;
}

.options .dark-mode-toggler {
  cursor: pointer;
  font-size: 24px;
}

.svg-icon {
  display: flex;
  align-items: center;
}

.about-steemhunt {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.about-steemhunt img {
  height: 55px;
  display: block;
}

.about-steemhunt h1 {
  text-align: right;
  font-size: 1.375rem;
  margin-bottom: 0.25rem;
}

.about-steemhunt .right {
  text-align: right;
}

.about-steemhunt .right .sub-title {
  font-size: 0.875rem;
  font-weight: 300;
  color: #9b9b9b;
}

.products-title-container {
  margin-top: 3rem;
  margin-bottom: 2rem;
}

.products-title-container h2 {
  font-size: 1.375rem;
  margin-bottom: 0.25em;
}

.products-title-container p {
  margin: 0;
  font-size: 0.875rem;
}

.products-title-container p b {
  color: #777;
}

.products-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

.product-container {
  width: 300px;
  position: relative;
}

.product-container a {
  display: block;
}

.product-container .image-overlay {
  background-color: rgba(0, 0, 0, 0.03);
  border-radius: 4px;
  width: 300px;
  height: 200px;
  position: absolute;
  top: 0;
  left: 0;
}

.product-container img {
  border-radius: 4px;
  width: 300px;
  height: 200px;
  object-fit: cover;
  margin-bottom: 0.5rem;
}

.product-container {
  font-size: 0.875rem;
}

.product-container h3 {
  font-weight: 400;
  margin: 0;
}

.product-container .stats {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  margin: 0.25rem 0;
  color: #aaa;
}

.product-container .stats .svg-icon {
  margin-right: 0.4em;
}

.product-container .stats .middot {
  display: inline-block;
  margin: 0 0.5em;
}

.product-container p {
  height: 2rem;
  overflow: hidden;
  text-overflow: ellipsis;
  margin-top: 0;
  margin-bottom: 3rem;
}

.app-container {
  margin-left: auto;
  margin-right: auto;
  min-width: 300px;
  max-width: 1875px;
}

@media screen and (max-width: 734px) { /* 1 column = 300 * 1 (padding: 120) */
  .about-steemhunt .right {
    display: none;
  }

  .app-container {
    max-width: 300px;
  }
}

@media screen and (min-width: 735px) { /* 2 columns = 300 * 2 + 15 * 1 (padding: 120) */
  .app-container {
    max-width: 615px;
  }
}

@media screen and (min-width: 1050px) { /* 3 columns = 300 * 3 + 15 * 2 (padding: 120) */
  .app-container {
    max-width: 930px;
  }
}

@media screen and (min-width: 1365px) { /* 4 columns = 300 * 4 + 15 * 3 (padding: 120) */
  .app-container {
  max-width: 1245px;
  }
}

/* Alert */

.alert {
  opacity: 1;
  transition: all 0.3s ease-in-out;
  box-shadow: 0px 3px 11px -8px rgba(0,0,0,0.54);
  background-image: linear-gradient(to top, #fa7f92, #fc6f6f);
  border: none;
  width: 400px;
  position: absolute;
  top: 20px;
  right: 20px;
  z-index: 9999;
  padding: 20px;
  color: #fff;
  font-size: 0.875rem;
  text-align: center;
}

.alert.hidden {
  right: -500px;
  opacity: 0;
}

